1-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-arc-health-service
spec:
  selector:
    app: otus-arc-health
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web-server
  type: NodePort
